--- a/info/introduction.org
+++ b/info/introduction.org
@@ -1,4 +1,4 @@
-APDL ([[https://de.wikipedia.org/wiki/Ansys_Parametric_Design_Language][Ansys Parametric Design Language]]) is the solver scripting
+APDL ([[https://de.wikipedia.org/wiki/ANSYS_Parametric_Design_Language][Ansys Parametric Design Language]]) is the solver scripting
 language of the mechanical FEA (Finite Element Analysis) suite [[http://www.ansys.com][Ansys]]
 (ANalysis SYStem, registered TM).
 
@@ -18,17 +18,18 @@ to stay: `WorkBench' and `AIM' operate exclusively the Ansys solver
 with it!  They are producing and sending APDL input (.dat) files to
 the solver.  For a true understanding of the GUIs' inner workings a
 study of their APDL code is prerequisite!  Moreover, the GUIs are
-not supporting all solver features.  So "Command (APDL)" snippets
+not supporting all solver features.  So "Command (APDL)" objects
 are used to enhance the GUIs' modelling capabilities.
 
 Nowadays I find APDL-Mode mostly useful for studying solver (.dat)
 files which were created by WorkBench.  And, especially, for writing
-WorkBench `Command' snippets and inspecting longer snippets from
-other sources.  Accessing swiftly the Ansys APDL reference
-documentation alone is worth using APDL-Mode!
+WorkBench `Command' objects and inspecting longer command snippets
+from other sources.  Accessing the Ansys APDL reference documentation
+with the detour of searching the keywords alone is worth using
+APDL-Mode!
 
-When you "Export" (or "Import") such a WorkBench Command (APDL)
-object it becomes associated with a file and is editable with a
+When you "Export" (or "Import") such a WorkBench "Command (APDL)"
+object it becomes associated with a file and is then editable with a
 third party editor.  When you have modified the file then the "File
 Status" in Workbench changes and you can pull-in the updated content
 with the "Refresh" button.
